--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,11 @@
 * {
     font-family: 'Kanit', sans-serif;
 }
+
+.vl {
+    border-left: 2px solid rgb(212, 215, 224);
+    height: 400px;
+    position: absolute;
+    left: 50%;
+    margin-left: -3px;
+  }
